src/test/deca/context/valid/instanceOf.deca
class A {
    int x;
}

{
    A a = new A();
    if (a instanceof A) {}
}