src/test/deca/context/invalid/public_var.deca
class A{
protected int x = 0;
}
{
A a = new A();
print(x);
}